--- a/test/fixtures/cases.yml
+++ b/test/fixtures/cases.yml
@@ -3,7 +3,7 @@
 one:
   user: one
   subject: one
-  card_data: one
+  card_templates: one
   full_citation: MyString
   case_name: MyString
   case_short_name: MyString
@@ -14,7 +14,7 @@ one:
 two:
   user: two
   subject: two
-  card_data: two
+  card_templates: two
   full_citation: MyString
   case_name: MyString
   case_short_name: MyString
